log-output/svcmesh-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: exercises
  labels:
    istio.io/dataplane-mode: ambient
    istio.io/use-waypoint: log-gateway-istio
