log-output/svcmesh-manifests/logdb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: logdb
  namespace: exercises
spec:
  serviceName: logdb
  replicas: 1
  selector:
    matchLabels:
      app: logdb
  template:
    metadata:
      labels:
        app: logdb
    spec:
      containers:
      - name: logdb
        image: postgres:16-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
          subPath: postgres
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi

---

apiVersion: v1
kind: Service
metadata:
  name: logdb-svc
  namespace: exercises
spec:
  selector:
    app: logdb
  ports:
  - port: 5432
    targetPort: 5432
