log-output/svcmesh-manifests/gatewayroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: exercises-gateway
  namespace: exercises
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: exercises-route
  namespace: exercises
spec:
  parentRefs:
  - name: exercises-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: log-output-svc
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /pingpong
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
    - name: pingpong-app-svc
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /greeter
    backendRefs:
    - name: greeter-svc-v1
      port: 80
      weight: 75
    - name: greeter-svc-v2
      port: 80
      weight: 25

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: greeter-route
  namespace: exercises
  annotations:
    gateway.networking.k8s.io/controller: istio.io/gateway-controller
spec:
  parentRefs:
  - name: greeter-svc
    kind: Service
    group: ""
  rules:
  - backendRefs:
    - name: greeter-svc-v1
      port: 80
      weight: 75
    - name: greeter-svc-v2
      port: 80
      weight: 25
